turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: not found: value setCouleur
if(n==colors.length-1){setCouleur(colors(0))}
                       ^